src/test/deca/context/invalid/Objet/extends_nonexist.deca
// Description:
//    test de faire renvoyer dans une méthode un type qui n'existe pas 
//
// Resultats:
//  10:6: The extended class  B does not exist 
//
// Historique:
//    cree le 20/01/2022

class A extends B  {
    
}

{}



